# Comments-SPA

./: .gitignore  README.md  database_schema.drawio  docker-compose.yaml
backend/: .env.sample  Dockerfile  entrypoint.sh  pyproject.toml  ws-entrypoint.sh
backend/captcha/: urls.py  views.py
backend/comments/: consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_initial.py
backend/comments_spa/: asgi.py  celery.py  jwt_middleware.py  settings.py  urls.py  wsgi.py
backend/pubsub/: pub.py  sub.py
backend/pubsub/management/commands/: start_sub.py
backend/templates/emails/: verification_email.html  welcome_email.html
backend/user/: serializers.py  tasks.py  tokens.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js
frontend/src/assets/: global.css
frontend/src/components/: CommentForm.vue  CommentItem.vue  CommentList.vue  Home.vue  Login.vue  Profile.vue  Register.vue
frontend/src/helpers/: axios.interceptor.js
frontend/src/router/: index.js
frontend/src/services/: auth-header.js  auth.js
frontend/src/store/: auth.module.js  index.js
frontend/src/store/modules/: auth.js  commentForm.js
nginx/: Dockerfile  default.conf
