[tool.poetry]
name = "comments-spa"
version = "0.1.0"
description = ""
authors = ["AndrewwSS <clash2clans1one@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework-recursive = "^0.1.2"
pillow = "^10.4.0"
django-redis = "^5.4.0"
celery = "^5.4.0"
django-cors-headers = "^4.4.0"
djangochannelsrestframework = "^1.2.0"
channels-redis = "^4.2.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
